<resources>
    <string name="app_name">D´PARCHE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_recre">Rcreacion</string>
    <string name="menu_cul">Cultura</string>
    <string name="menu_motel">Motel</string>
    <string name="menu_disco">Discotecas</string>
    <string name="menu_restaurantes">Restaurantes</string>
    <string name="menu_bares">Bares</string>
    <string name="title_activity_mapa_ubi">MapaUbi</string>


</resources>